--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 	<title>The Swiss Army YouTube Searcher</title>
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:400,600|Courgette|Oswald" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"> -->
+	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
 	<!-- build:css ./_assets/combined.css -->
 	<link rel="stylesheet" href="../lib/ui-bootstrap-csp.css">
 	<link rel="stylesheet" href="./css/styles.css">
@@ -23,26 +23,24 @@
 			<div class="animate-view" id="content" ui-view="content"></div>
 		</div>
 	</div>
-	<!-- <script src="../node_modules/jquery/dist/jquery.js"></script> -->
-	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<!-- <script src="../node_modules/angular/angular.js"></script> -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-	<!-- <script src="../node_modules/angular-animate/angular-animate.js"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-animate.min.js"></script>
-	<!-- <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script> -->
-	<!-- <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script> -->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.js"></script>
+	<script src="../node_modules/jquery/dist/jquery.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script> -->
+	<script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+	<script src="../node_modules/angular/angular.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script> -->
+	<script src="../node_modules/angular-animate/angular-animate.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-animate.min.js"></script> -->
+	<script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+	<script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+	<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap.js"></script> -->
+	<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.js"></script> -->
 	<!-- <script src="../node_modules/angular-ui-router/release/angular-ui-router.js"></script> -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script> -->
+	<script src="../node_modules/moment/moment.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-	<!-- <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
-	<script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script> -->
 	<!-- build:js ./_assets/combined.js -->
 	<script src="app.js"></script>
 	<script src="./components/routes.js"></script>
@@ -51,8 +49,6 @@
 	<script src="./partials/general/modals/alertModalController.js"></script>
 	<script src="./partials/search/searchController.js"></script>
 	<script src="./partials/search/search-partials/modals/searchSavedModalController.js"></script>
-	<script src="./partials/search/search-partials/modals/initModalController.js"></script>
-	<script src="./partials/search/search-partials/modals/updateModalController.js"></script>
 	<script src="./partials/search/search-partials/modals/errorModalController.js"></script>
 	<script src="./partials/video/video-partials/itemController.js"></script>
 	<script src="./partials/playlist/playlistController.js"></script>
